--- a/css/jquery-ui-demo.css
+++ b/css/jquery-ui-demo.css
@@ -1,14 +1,15 @@
 @charset "UTF-8";
+
 /*
- * jQuery File Upload Demo CSS
+ * MEGA web Development Test
+ *
+ * Presented By: Syed Sana ul Haq Fazli
+ * http://www.syedfazli.com
+ *
+ * Source Help From:
  * https://github.com/blueimp/jQuery-File-Upload
- *
- * Copyright 2013, Sebastian Tschan
- * https://blueimp.net
- *
- * Licensed under the MIT license:
- * https://opensource.org/licenses/MIT
  */
+
 
 body {
   max-width: 750px;
